# python-uvx-example

./: .gitignore  README.md  pyproject.toml
src/python_uvx_example/: __init__.py
src/python_uvx_tool/: __init__.py
